# Edge_Optimizer

./: .gitignore  Cargo.toml  DESIGN.md  Game-On.bat  HP_VICTUS_SETUP.md  README.md  RESEARCH_NOTES.md  SetAutoFan.ps1  SetMaxFan.ps1
Hardware/: BiosCtl.cs  BiosData.cs  Settings.cs
src/: driver.rs  hp.rs  hp_wmi.rs  lib.rs  manager.rs  model.rs  windows_power.rs
