[package]
name = "edge_optimizer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "edge_optimizer"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
libloading = "0.8"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }
